rocketfront/public/main.css
.alert-summary {
	display: inline-block;
	padding: 1em 1em;
}

.alert-title {
	text-align: center;
	color: #4dacff;
}

.classy {
	padding-right: 10px;
}
.contact-summary {
	display: inline-block;
	padding: 1em 3em;
}

.contact-title {
	text-align: center;
	color: #4dacff;
}

.cufflinks {
	color: black;
}

.cufflinks:hover {
	color: black;
}
div.app-grid {
	position: fixed;
	overflow-y: scroll;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: grid !important;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: auto;
	grid-template-areas: "header header header" "sidebar main main";
}

div.grid-zone.grid-zone--header {
	grid-area: header;
}

#failed {
	color: rgb(175, 5, 5);
}
.grid-zone--sidebar {
	grid-area: sidebar;
	overflow-y: scroll;
	scroll-behavior: smooth;
}

.grid-zone--main {
	grid-area: main;
	overflow-y: scroll;
	scroll-behavior: smooth;
}

.grid-zone-main__subheader {
	text-align: center;
}

.grid-zone-sidebar__subheader {
	text-align: center;
}

.hbo {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	width: 30%;
	height: 25%;
	/* text-align: center; */
	background-color: aliceblue;
	position: fixed;
	top: 50%;
	left: 50%;
	/* bring your own prefixes */
	transform: translate(-50%, -50%);
	overflow: hidden;
	clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
}

.hbo h3 {
	color: darkblue;
}
.home {
	width: 100%;
	height: 100%;
	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
		url("./img/spaceblues.jpg");
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
}

.inForm {
	background-color: rgb(7, 21, 61);
	width: 400px;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	position: fixed;
	top: 50%;
	left: 50%;
	/* bring your own prefixes */
	transform: translate(-50%, -50%);
	overflow: hidden;
	padding: 5px;
}

rux-button {
	padding: 5px;
}
.rux-form-field {
	padding: 5px;
}

.rux-form-field-div-search {
	width: 20%;
	text-align: right;
}

